--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html>
 <body>
 	
-<h1>Coffee Art</h1>
+<h1>You are soaking in the pouring rain, do you seek shelter in the coffee shop or do you take your chances at the bus station?</h1>
 
-<img src="https://www.nespresso.com/ncp/res/uploads/recipes/nespresso-recipes-Latte-Art-Tulip.jpg" alt="tulip coffee art" style="width:500px;height:600px;">
+<iframe width="800" height="720" src="https://www.youtube.com/embed/YOJsKatW-Ts"> 
+</iframe>
 
-<p><a href="pagetwo.html">more coffee art</a></p>
+<p><a href="pagetwo.html">Seek Shelter in coffee shop</a></p>
 
+<p><a href="pagethree.html">Take chances at bus station</a></p>
 </body>
 </html>
