--- a/pagethree.html
+++ b/pagethree.html
@@ -2,10 +2,15 @@
 <html>
 <body>
 	
-<h1>Even More Coffee Art</h1>
+<h1>You choose to wait for a bus at the bus stop. A strange person stis next to you... what do you do?</h1>
 
-<img src="https://i.insider.com/51a4c67a6bb3f7b44d000002?width=750&format=jpeg&auto=webp" alt="cat coffee art"
+<img src="stranger.jpg" alt="bus stop"
 
+<br>
+
+<p><a href="pagesix.html">You continue to wait for the bus</a></p>
+
+<p style="font-size:400%;"><a href="pageseven.html">RUN</a></p>
 
 </body>
 </html>
