--- a/pagetwo.html
+++ b/pagetwo.html
@@ -2,11 +2,13 @@
 <html>
 <body>
 	
-<h1>More Coffee Art</h1>
+<h1>You have chosen to seek shelter at the coffee shop, a barista tells you that you can only stay if you order something. What do you order?</h1>
 
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQdQUUIo9jw-djzqUWSfAVKWlGMx9NORWW62Q&usqp=CAU" alt="lion coffee art"
+<img src="barista.jpg" alt="barista" width="800" height="600">
 
-<p><a href="pagethree.html">even more coffee art</a></p>
+<p><a href="pagefour.html">Just water</a></p>
+
+<p><a href="pagefive.html">A warm latte</a></p>
 
 </body>
 </html>
