--- a/index.html
+++ b/index.html
@@ -1,14 +1,52 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title>navigation</title>
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+ <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+<!-- Popper JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> 
+</head>
+
+<p style="font-family: Arial; font-size:50px; text-align: center;">calvin nguyen's portfolio</p>
+
 <body>
-	
-<h1>You are soaking in the pouring rain, do you seek shelter in the coffee shop or do you take your chances at the bus station?</h1>
 
-<iframe width="800" height="720" src="https://www.youtube.com/embed/YOJsKatW-Ts"> 
-</iframe>
+<nav class="navbar navbar-expand-sm bg-light navbar-light">
+ <ul class="navbar-nav">
+	<li class="nav-item"><a class="nav-link" href="index.html">home</a></li>
+	<li class="nav-item"><a class="nav-link" href="glitch.html">glitch</a></li>
+	<li class="nav-item"><a class="nav-link" href="meme.html">meme</a></li>
+	<li class="nav-item"><a class="nav-link" href="minecraft.html">minecraft</a></li>
+	<li class="nav-item"><a class="nav-link" href="netart.html">net-art</a></li>
+</ul> 
+</nav>
 
-<p><a href="pagetwo.html">Seek Shelter in coffee shop</a></p>
+<div class="row">
+	<div class="column">
+	  <img src="calvin1.jpg" width="400" height="550" style="margin: 5px 5px 5px 5px;">
+	  <img src="calvin2.jpg" width="400" height="550" style="margin: 5px 5px 5px 5px;">
+	  <img src="calvin8.jpg" width="400" height="550" style="margin: 5px 5px 5px 5px;">
+	  </div>
+	  <div class="column">
+	  <img src="calvin3.jpg" width="400" height="550" style="margin: 5px 5px 5px 5px;">
+	  <img src="calvin6.jpg" width="550" height="550" style="margin: 5px 5px 5px 5px;">
+	  <img src="calvin9.jpg" width="400" height="550" style="margin: 5px 5px 5px 5px;">
+	  </div>
+	  <div class="column">
+	  <img src="calvin5.jpg" width="400" height="550" style="margin: 5px 5px 5px 5px;">
+	  <img src="calvin4.jpg" width="400" height="550" style="margin: 5px 5px 5px 5px;">
+	  <img src="calvin10.jpg" width="400" height="550" style="margin: 5px 5px 5px 5px;">
+	  </div>
 
-<p><a href="pagethree.html">Take chances at bus station</a></p>
 </body>
 </html>
