--- a/glitch.html
+++ b/glitch.html
@@ -33,9 +33,9 @@
 
 <br></br>
 
-<img src="tunnel.jpg" alt="tunnel" width="850" height="800">
+<img src="tunnel.JPG" alt="tunnel" width="850" height="800">
 <img src="caltrans.JPG" alt="caltrans" width="470" height="800">
-<img src="lacma.jpg" alt="lights" width="850" height="800">
+<img src="lacma.JPG" alt="lights" width="850" height="800">
 
 <br></br>
 
