--- a/meme.html
+++ b/meme.html
@@ -36,7 +36,7 @@
 
 <div class="row">
     <div class="column"></div>
-    <img src="thisisfine.jpg" alt="this is fine meme" width="700" height="380" style="margin: 5px 5px 5px 5px;">
+    <img src="thisisfine.JPG" alt="this is fine meme" width="700" height="380" style="margin: 5px 5px 5px 5px;">
     <img src="jollibeesad.jpg" alt="jollibeesad" width="275" height="380" style="margin: 5px 5px 5px 5px;">
     <img src="jollibeecry.jpg" alt="jollibeecry" width="350" height="380" style="margin: 5px 5px 5px 5px;">
 </div>
