--- a/netart.html
+++ b/netart.html
@@ -32,7 +32,7 @@
 
 <br></br>
 
-<img src= "netart.JPG" alt="net art" width="1000" height="550" style="margin: 5px 5px 5px 5px;">
+<img src= "netart.jpg" alt="net art" width="1000" height="550" style="margin: 5px 5px 5px 5px;">
 
 
 
