--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<li class="nav-item"><a class="nav-link" href="meme.html">meme</a></li>
 	<li class="nav-item"><a class="nav-link" href="minecraft.html">minecraft</a></li>
 	<li class="nav-item"><a class="nav-link" href="netart.html">net-art</a></li>
-	<li class="nav-item"><a class="nav-link" href="http://127.0.0.1:8913/">game</a></li>
+	<li class="nav-item"><a class="nav-link" href="game.js">game</a></li>
 </ul> 
 </nav>
 
