--- a/game.html
+++ b/game.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title> Fruit Ninja</title>
+<script>
 var ballx = 300;
 var bally = 300;
 var ballSize = 40;
@@ -99,3 +106,6 @@ function levelThree(){
 //  line(ballx, bally, mouseX, mouseY);
   image(pomegranate, ballx, bally, 75, 75);
 } // end level thre
+</script>
+</head>
+</html>
