--- a/game.html
+++ b/game.html
@@ -4,6 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title> Fruit Ninja</title>
+</head>
+<body>
 <script>
 var ballx = 300;
 var bally = 300;
@@ -107,5 +109,5 @@ function levelThree(){
   image(pomegranate, ballx, bally, 75, 75);
 } // end level thre
 </script>
-</head>
+</body>
 </html>
