--- a/game/game.html
+++ b/game/game.html
@@ -24,7 +24,7 @@
     </ul> 
     </nav>
 	
-	<iframe src="game/index.html" height="800" width="1000" title= "game"></iframe>
+	<iframe src="game/index.html" height="800" width="1000" title= "game" scrolling="no"></iframe>
 	
 </body>
 
