--- a/game.html.html
+++ b/game.html.html
@@ -24,7 +24,7 @@
     </ul> 
     </nav>
 	
-	<iframe src="game/index.html" height="400" width="600" title= "game" scroll="no"></iframe>
+	<iframe src="game/index.html" height="400" width="600" title= "game" scroll="false"></iframe>
 	
 </body>
 
