--- a/final.html
+++ b/final.html
@@ -35,6 +35,6 @@
 
 <br></br>
 
-<img src= "finalproject.jpg" alt="final project" width="650" height="400" style="margin: 5px 5px 5px 5px;">
+<img src= "finalproject.JPG" alt="final project" width="650" height="400" style="margin: 5px 5px 5px 5px;">
 
 </html>
