--- a/aiart.html
+++ b/aiart.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>minecraft art</title>
+<title>navigation</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -11,7 +11,7 @@
 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> 
 
-<p style="font-family: Arial; font-size:40px; text-align: center;">net art</p>
+<p style="font-family: Arial; font-size:40px; text-align: center;">glitch art</p>
 
 <body>
 
@@ -30,15 +30,29 @@
 </nav>
 </body>
 
+
 <h1 style="font-family:Arial; font-size:30px; margin: 0px 0px 0px 5px;"">artist statement</h1>
 <p style="margin: 0px 0px 5px 5px;">    
-    For this project, I created an interactive choose-your-own-adventure website that has different themes and endings depending on the choices the viewer makes.
+    For this project, I made an art piece with the theme of growth and fitting in.
 </p>
 
 <br></br>
 
-<img src= "netart.jpg" alt="net art" width="1000" height="550" style="margin: 5px 5px 5px 5px;">
-
-
-
+<div class="row">
+	<div class="column">
+	<img src="dtla.jpg" alt="downtown la" width="650" height="400" style="margin: 5px 5px 5px 5px;">
+	<img src="everest.jpg" alt="mount everest" width="650" height="400" style="margin: 5px 5px 5px 5px;">
+	<img src="adain1.jpg" alt="result1" width="650" height="400" style="margin: 5px 5px 5px 5px;">
+	</div>
+	<div class="column">
+	<img src="downtownnyc.jpg" alt="downtown nyc" width="650" height="400" style="margin: 5px 5px 5px 5px;">
+	<img src="yosemite.jpg" alt="yosemite" width="650" height="400" style="margin: 5px 5px 5px 5px;">
+	<img src="adain2.jpg" alt="result2" width="650" height="400" style="margin: 5px 5px 5px 5px;">
+	</div>
+	<div class="column">
+	<img src="downtownchicago.jpg" alt="downtown chicago" width="650" height="400" style="margin: 5px 5px 5px 5px;">
+	<img src="desert.jpg" alt="desert" width="650" height="400" style="margin: 5px 5px 5px 5px;">
+	<img src="adain3.jpg" alt="result3" width="650" height="400" style="margin: 5px 5px 5px 5px;">
+	</div>
+	
 </html>
