--- a/final.html
+++ b/final.html
@@ -14,17 +14,20 @@
 <p style="font-family: Arial; font-size:40px; text-align: center;">final project</p>
 
 <body>
-    <nav class="navbar navbar-expand-sm bg-light navbar-light">
-     <ul class="navbar-nav">
-         <li class="nav-item"><a class="nav-link" href="index.html">home</a></li>
-        <li class="nav-item"><a class="nav-link" href="glitch.html">glitch</a></li>
-        <li class="nav-item"><a class="nav-link" href="meme.html">meme</a></li>
-        <li class="nav-item"><a class="nav-link" href="minecraft.html">minecraft</a></li>
-        <li class="nav-item"><a class="nav-link" href="netart.html">net-art</a></li>
-		<li class="nav-item"><a class="nav-link" href="final.html">final</a></li>
 
-    </ul> 
-    </nav>
+<nav class="navbar navbar-expand-sm bg-light navbar-light">
+ <ul class="navbar-nav">
+	<li class="nav-item"><a class="nav-link" href="index.html">home</a></li>
+	<li class="nav-item"><a class="nav-link" href="glitch.html">glitch</a></li>
+	<li class="nav-item"><a class="nav-link" href="meme.html">meme</a></li>
+	<li class="nav-item"><a class="nav-link" href="minecraft.html">minecraft</a></li>
+	<li class="nav-item"><a class="nav-link" href="netart.html">net-art</a></li>
+	<li class="nav-item"><a class="nav-link" href="final.html">final</a></li>
+	<li class="nav-item"><a class="nav-link" href="code-as-art.html">code art</a></li>
+	<li class="nav-item"><a class="nav-link" href="aiart.html">ai and art</a></li>
+
+</ul> 
+</nav>
 </body>
 
 
