--- a/game.html
+++ b/game.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>minecraft art</title>
+<title>Game</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -11,7 +11,7 @@
 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> 
 
-<p style="font-family: Arial; font-size:40px; text-align: center;">net art</p>
+<p style="font-family: Arial; font-size:40px; text-align: center;">glitch art</p>
 
 <body>
 
@@ -28,17 +28,10 @@
 
 </ul> 
 </nav>
+	
+	<iframe src="game/index.html" height="400" width="600" title= "game" scroll="false"></iframe>
+	
 </body>
-
-<h1 style="font-family:Arial; font-size:30px; margin: 0px 0px 0px 5px;"">artist statement</h1>
-<p style="margin: 0px 0px 5px 5px;">    
-    For this project, I created an interactive choose-your-own-adventure website that has different themes and endings depending on the choices the viewer makes.
-</p>
-
-<br></br>
-
-<img src= "netart.jpg" alt="net art" width="1000" height="550" style="margin: 5px 5px 5px 5px;">
-
 
 
 </html>
