--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 	<li class="nav-item"><a class="nav-link" href="netart.html">net-art</a></li>
 	<li class="nav-item"><a class="nav-link" href="final.html">final</a></li>
 	<li class="nav-item"><a class="nav-link" href="code-as-art.html">code art</a></li>
+	<li class="nav-item"><a class="nav-link" href="aiart.html">ai and art</a></li>
+
 </ul> 
 </nav>
 
