--- a/aiart.html
+++ b/aiart.html
@@ -42,17 +42,17 @@
 	<div class="column">
 	<img src="dtla.jpg" alt="downtown la" width="650" height="400" style="margin: 5px 5px 5px 5px;">
 	<img src="everest.jpg" alt="mount everest" width="650" height="400" style="margin: 5px 5px 5px 5px;">
-	<img src="adain1.jpg" alt="result1" width="650" height="400" style="margin: 5px 5px 5px 5px;">
+	<img src="art1.jpg" alt="result1" width="650" height="400" style="margin: 5px 5px 5px 5px;">
 	</div>
 	<div class="column">
 	<img src="downtownnyc.jpg" alt="downtown nyc" width="650" height="400" style="margin: 5px 5px 5px 5px;">
 	<img src="yosemite.jpg" alt="yosemite" width="650" height="400" style="margin: 5px 5px 5px 5px;">
-	<img src="adain2.jpg" alt="result2" width="650" height="400" style="margin: 5px 5px 5px 5px;">
+	<img src="art2.jpg" alt="result2" width="650" height="400" style="margin: 5px 5px 5px 5px;">
 	</div>
 	<div class="column">
 	<img src="downtownchicago.jpg" alt="downtown chicago" width="650" height="400" style="margin: 5px 5px 5px 5px;">
 	<img src="desert.jpg" alt="desert" width="650" height="400" style="margin: 5px 5px 5px 5px;">
-	<img src="adain3.jpg" alt="result3" width="650" height="400" style="margin: 5px 5px 5px 5px;">
+	<img src="art3.jpg" alt="result3" width="650" height="400" style="margin: 5px 5px 5px 5px;">
 	</div>
 	
 </html>
