--- a/aiart.html
+++ b/aiart.html
@@ -42,16 +42,16 @@
 	<div class="column">
 	<img src="dtla.jpg" alt="downtown la" width="650" height="400" style="margin: 5px 5px 5px 5px;">
 	<img src="everest.jpg" alt="mount everest" width="650" height="400" style="margin: 5px 5px 5px 5px;">
-	<img src="result1.jpg" alt="result1" width="650" height="400" style="margin: 5px 5px 5px 5px;">
+	<img src="airesult.jpg" alt="ai1" width="650" height="400" style="margin: 5px 5px 5px 5px;">
 	</div>
 	<div class="column">
 	<img src="downtownnyc.jpg" alt="downtown nyc" width="650" height="400" style="margin: 5px 5px 5px 5px;">
 	<img src="yosemite.jpg" alt="yosemite" width="650" height="400" style="margin: 5px 5px 5px 5px;">
-	<img src="result2.jpg" alt="result2" width="650" height="400" style="margin: 5px 5px 5px 5px;">
+	<img src="airesult2.jpg" alt="ai2" width="650" height="400" style="margin: 5px 5px 5px 5px;">
 	</div>
 	<div class="column">
 	<img src="downtownchicago.jpg" alt="downtown chicago" width="650" height="400" style="margin: 5px 5px 5px 5px;">
 	<img src="desert.jpg" alt="desert" width="650" height="400" style="margin: 5px 5px 5px 5px;">
-	<img src="result3.jpg" alt="result3" width="650" height="400" style="margin: 5px 5px 5px 5px;">
+	<img src="airesult3.jpg" alt="ai3" width="650" height="400" style="margin: 5px 5px 5px 5px;">
 	</div>
 </html>
