--- a/aiart.html
+++ b/aiart.html
@@ -33,7 +33,7 @@
 
 <h1 style="font-family:Arial; font-size:30px; margin: 0px 0px 0px 5px;"">artist statement</h1>
 <p style="margin: 0px 0px 5px 5px;">    
-    For this project, I made an art piece with the theme of growth and fitting in.
+    For this project, I decided to merge different cities and different landmarks of nature together.
 </p>
 
 <br></br>
